# onecode-desktop

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: PRD-gui-wizard.md
scripts/: copy-static.sh
src/: ambient.js  cc-status.js  console-capture.js  file-explorer.js  index.html  ipc-bridge.js  main.js  orbital.js  palette.js  ripple.js  styles.css  theme.js  wizard.css  wizard.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: backend.rs  cc_sessions.rs  cc_status.rs  commands.rs  config.rs  events.rs  fs_explorer.rs  lib.rs  macros.rs  main.rs  tray.rs  wizard.rs
src-tauri/src/pty/: health.rs  mod.rs  slot.rs
src-tauri/src/session/: mod.rs  schema.rs
src/terminal/: ime-fix.js  mention.js  scroll-thumb.js  tab-manager.js  terminal.js
tests/: cc-loaders.test.mjs  cron.test.mjs  frontmatter.test.mjs  health.test.mjs  ime-filter.test.mjs  ime-fix.test.mjs  mention.test.mjs  orbital-menu.test.mjs  restart.test.mjs  ringbuffer.test.mjs
tests/lib/: cron.mjs  frontmatter.mjs  health.mjs  oracle-cron.mjs  restart.mjs  ringbuffer.mjs
verify-rust/: Cargo.toml
verify-rust/src/: lib.rs
